@@ -6,6 +6,7 @@ import at.ac.tuwien.sepr.groupphase.backend.exception.NotFoundException;
 import at.ac.tuwien.sepr.groupphase.backend.exception.ValidationException;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.context.support.DefaultMessageSourceResolvable;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.HttpStatusCode;
@@ -110,20 +111,33 @@ public class GlobalExceptionHandler extends ResponseEntityExceptionHandler {
      */
     @Override
     protected ResponseEntity<Object> handleMethodArgumentNotValid(
-            MethodArgumentNotValidException ex,
-            HttpHeaders headers,
-            HttpStatusCode statusCode,
-            WebRequest request) {
+        MethodArgumentNotValidException ex,
+        HttpHeaders headers,
+        HttpStatusCode statusCode,
+        WebRequest request) {
 
-        List<String> errors = ex.getBindingResult()
-                .getFieldErrors()
-                .stream()
-                .map(FieldError::getDefaultMessage)
-                .collect(Collectors.toList());
+        List<String> fieldErrors = ex.getBindingResult()
+            .getFieldErrors()
+            .stream()
+            .map(FieldError::getDefaultMessage)
+            .toList();
+
+        List<String> globalErrors = ex.getBindingResult()
+            .getGlobalErrors()
+            .stream()
+            .map(DefaultMessageSourceResolvable::getDefaultMessage)
+            .toList();
+
+        List<String> allErrors = new java.util.ArrayList<>();
+        allErrors.addAll(fieldErrors);
+        allErrors.addAll(globalErrors);
+
+        ValidationErrorRestDto response = new ValidationErrorRestDto("Validation failed", allErrors);
 
         return ResponseEntity
-                .status(statusCode.value())
-                .headers(headers)
-                .body(errors);
+            .status(HttpStatus.UNPROCESSABLE_ENTITY)
+            .headers(headers)
+            .body(response);
     }
+
 }
